--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -78,10 +78,6 @@
     width: 100%;
 }
 
-.answer-card-actions img{
-    cursor: pointer;
-}
-
 
 .comment-actions{
     display: flex;
@@ -336,6 +332,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.best-answer-empty-heart {
+    cursor: pointer;
 }
 
 .required-login-banner {
