--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -206,6 +206,10 @@ aside {
     margin-top: 10vh;
 }
 
+#banner-mobile{
+    display: none;
+}
+
 #mobile-icon {
     display: none;
     width: 12rem;
@@ -264,5 +268,15 @@ aside {
 
     #mobile-icon {
         display: block;
+    }
+
+    #banner-mobile{
+        display: flex;
+    }
+
+    .banner{
+        padding-top: 0;
+        margin-top: 0;
+        margin-bottom: 16px;
     }
 }
