--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -217,6 +217,14 @@ aside {
     margin-bottom: 2rem;
 }
 
+.questions-banner{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+}
+
 @media (max-width: 1500px) {
     .index-anon {
         background: var(--light-green);
