--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -217,7 +217,7 @@ aside {
     margin-bottom: 2rem;
 }
 
-.questions-banner{
+.questions-card-banner-wrapper{
     display: flex;
     width: 100%;
     height: 100%;
