--- a/src/main/resources/templates/templateEmail.html
+++ b/src/main/resources/templates/templateEmail.html
@@ -10,9 +10,8 @@
             </o:OfficeDocumentSettings>
         </xml>
         <![endif]-->
-        <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>*|MC:SUBJECT|*</title>
         
     <style type="text/css">
@@ -560,15 +559,19 @@
                         
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
                         
-                            <h3 th:text="'Ola ' + ${userName}"></h3>
+                            <h3 th:text="'Olá, ' + ${userName} + '!'"></h3>
                                 <br>
                                 <br>
-                            <h3 th:text="${emailText}">
-                            </h3>
                             <h3>
-                                <span style="color:#FF0000"><strong th:text="${questionTitle}"></strong></span>
-                                Clique aqui para acessar o site.
+                                <span th:text="${emailTextInitial}"></span>
+                                <span style="color: #A9C679" th:text="${questionTitle}"></span>
+                                <span th:text="${emailTextEnd}"></span>
                             </h3>
+                            <br>
+                            <h3>
+                                 Veja mais detalhes no site.
+                            </h3>
+                            <br>
 
                         </td>
                     </tr>
@@ -592,7 +595,7 @@
                     <tbody>
                         <tr>
                             <td align="center" valign="middle" class="mcnButtonContent" style="font-family: Helvetica; font-size: 18px; padding: 18px;">
-                                <a class="mcnButton " title="Vá para o site" th:href="${questionUrl}" target="_blank" style="font-weight: bold;letter-spacing: -0.5px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Va para a sua pergunta</a>
+                                <a class="mcnButton "  th:href="${questionUrl}" target="_blank" style="font-weight: bold;letter-spacing: -0.5px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Ir para a pergunta</a>
                             </td>
                         </tr>
                     </tbody>
