--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -47,8 +47,8 @@
                 </div>
             </div>
             <div class="row white-background">
-                <button th:onclick="closeConfirmation()">Cancelar</button>
-                <button class="red-button" type="submit" onclick="submitConfirmation()">Confirmar</button>
+                <button class="red-button" th:onclick="closeConfirmation()">Cancelar</button>
+                <button type="submit" onclick="submitConfirmation()">Confirmar</button>
             </div>
         </form>
     </div>
