--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -66,6 +66,10 @@
     color: inherit;
 }
 
+.update-icon{
+    cursor: pointer;
+}
+
 .question-card-actions{
     display: flex;
     flex-direction: column;
