--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
     <main class="main-content">
         <img src="img/logo.svg" id="mobile-icon" alt="Logo da TownSq"/>
         <h1>Confira as perguntas mais recentes</h1>
-        <div class="banner" th:if="${banner} and ${questions.size() == 0}" id="banner-mobile">
+        <div class="banner" th:if="${banner != null} and ${questions.size() == 0}" id="banner-mobile">
             <div th:replace="fragments/banner.html :: banner"></div>
         </div>
         <div th:each="question: ${questions}" class="questions-card-banner-wrapper">
@@ -77,7 +77,7 @@
                     </div>
                 </div>
             </div>
-            <div class="banner" th:if="${banner} and (${questions.size() == 1}) or (${questions.size() >= 2} and ${questionStat.index == 1})" id="banner-mobile">
+            <div class="banner" th:if="${banner != null} and (${questions.size() == 1} or (${questions.size() >= 2} and ${questionStat.index == 1}))" id="banner-mobile">
                 <div th:replace="fragments/banner.html :: banner"></div>
             </div>
         </div>
