--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -226,7 +226,8 @@
                     <div class="action-icons-comment" sec:authorize="isAuthenticated()"
                          th:if="${#authentication.getPrincipal().id == comment.getUser().getId() || #authorization.expression('hasRole(''ROLE_MODERATOR'')')}">
                         <img th:onclick="|updateModal('editComment;${comment.getId()}')|" th:src="@{/img/icons/lapis.svg}" alt="Editar comentário"/>
-                        <a th:href="'/comment/delete/' + ${question.getId()} + '/' + ${comment.getId()}"><img th:src="@{/img/icons/lixeira.svg}" alt="Excluir comentário"/></a>
+                        <img alt="deletar" class="delete-icon" th:src="@{/img/icons/lixeira.svg}"
+                             th:onclick="|updateConfirmation('commentDeleteConfirmation;${question.getId()};${comment.getId()}')|"/>
                     </div>
                 </div>
             </div>
