--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -128,6 +128,19 @@
     padding: 5px 5px;
 }
 
+.topics-card {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 45%;
+    display: flex;
+    padding: 16px;
+    box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.25);
+    margin: 20px 20px;
+    border-radius: 10px;
+
+}
+
 .mobile{
     display: none;
 }
