--- a/src/main/resources/templates/adminBanner.html
+++ b/src/main/resources/templates/adminBanner.html
@@ -15,6 +15,7 @@
         <div class="tabs">
             <a class="prop" th:classappend="${active} ? 'active' : ''" href="/admin/banner">Editar Propaganda <span></span></a>
             <a class="mods" href="/admin/mods">Gerenciar Moderadores</a>
+            <a class="mods" href="/admin/topics">Gerenciar Tópicos</a>
         </div>
         <form role="form" th:action="@{/admin/banner}" th:method="post" th:object="${banner}">
             <div class="form">
@@ -49,7 +50,7 @@
         <p class="title" th:if="${banner ==  null || banner.getIsActive() != 1}">Nenhuma propaganda cadastrada.</p>
 
     </div>
-
+</div>
 <div th:replace="fragments/toast.html :: toasts">
 </div>
 </body>
