--- a/src/main/resources/templates/adminMods.html
+++ b/src/main/resources/templates/adminMods.html
@@ -45,7 +45,7 @@
             <div class="mod-card" th:each="moderator: ${moderators}">
                 <img src="/img/user.svg" alt="Imagem de perfil">
                 <p th:text="${moderator.getName()}"></p>
-                <a th:href="@{/admin/mods/delete/{id}(id=${moderator.getId()})}">Remover</a>
+                <a class="remove-button" th:href="@{/admin/mods/delete/{id}(id=${moderator.getId()})}">Remover</a>
             </div>
         </div>
 
