--- a/src/main/resources/templates/adminMods.html
+++ b/src/main/resources/templates/adminMods.html
@@ -13,9 +13,9 @@
     <div class="col-6">
         <div class="line"></div>
         <div class="tabs">
-            <a class="prop" href="/admin/banner">Editar Propaganda</a>
-            <a class="mods" th:classappend="${active} ? 'active' : ''" href="/admin/mods">Gerenciar Moderadores <span></span> </a>
-            <a class="mods" href="/admin/topics">Gerenciar Tópicos</a>
+            <a class="tab-item" href="/admin/banner">Editar Propaganda</a>
+            <a class="tab-item" th:classappend="${active} ? 'active' : ''" href="/admin/mods">Gerenciar Moderadores <span></span> </a>
+            <a class="tab-item" href="/admin/topics">Gerenciar Tópicos</a>
         </div>
         <form role="form" th:action="@{/admin/mods/getUser}" th:method="post">
             <div class="form">
