--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -106,8 +106,7 @@
                         </div>
                         <div class="vote-container col-1">
                             <div class="vote mt-4">
-                                <img th:src="@{/img/icons/upvote.svg}" class="vote-button" alt="upvote"
-                                     th:onclick="|doVote('upvote','question','${question.getId()}')|"/>
+                                <img th:src="'/img/icons/' + ${question.getVoted(#authentication.getPrincipal(), 'upvote')}" class="vote-button" alt="upvote"th:onclick="|doVote('upvote','question','${question.getId()}')|"/>
                                 <div class="vote-number" th:text="${question.getScore()}" th:id="'question-' + ${question.getId()} + '-score'"></div>
                                 <img th:src="@{/img/icons/downvote.svg}" class="vote-button" alt="downvote"
                                      th:onclick="|doVote('downvote','question','${question.getId()}')|">
