--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -105,11 +105,11 @@
                             <p th:text="${question.getDescription()}"></p>
                         </div>
                         <div class="vote-container col-1">
-                            <div class="vote mt-4">
+                            <div class="vote mt-4" th:id="'question-' + ${question.getId()} + '-score-actions'">
                                 <img sec:authorize="isAuthenticated()" th:src="'/img/icons/' + ${question.getVoted(#authentication.getPrincipal(), 'upvote')}" class="vote-button" alt="upvote"th:onclick="|doVote('upvote','question','${question.getId()}')|"/>
                                 <div class="vote-number" th:text="${question.getScore()}" th:id="'question-' + ${question.getId()} + '-score'"></div>
                                 <img sec:authorize="isAuthenticated()" th:src="'/img/icons/' + ${question.getVoted(#authentication.getPrincipal(), 'downvote')}" class="vote-button" alt="downvote"
-                                     th:onclick="|doVote('downvote','question','${question.getId()}')|">
+                                     th:onclick="|doVote('downvote','question','${question.getId()}')|"/>
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                                      th:src="@{/img/icons/best_answer.svg}"/>
                             </a>
                         </div>
-                            <div class="vote align-self-end my-3">
+                            <div class="vote align-self-end my-3" th:id="'answer-' + ${answer.getId()} + '-score-actions'">
                                 <img sec:authorize="isAuthenticated()" th:src="'/img/icons/' + ${answer.getVoted(#authentication.getPrincipal(), 'upvote')}" class="vote-button" alt="upvote">
                                 <div class="vote-number" th:text="${answer.getScore()}"></div>
                                 <img sec:authorize="isAuthenticated()" th:src="'/img/icons/' + ${answer.getVoted(#authentication.getPrincipal(), 'downvote')}" class="vote-button" alt="upvote">
